Cleaning up css, trying to fix an issue related to using website on mobile, and how the footer is still sticking to tha page and getting in the way of form content when a user is trying to fill out input fields

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,6 +264,7 @@ header.masthead .masthead-content .masthead-subheading {
   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
   color: #fff;
   min-height: 100vh;
+  padding-bottom: 40px;
   }
 
   .page-options {
@@ -314,8 +315,6 @@ footer .container-fluid {
     color: #fff;
     opacity: 0.8;
     background: #000;
-    position: static;
-    height: auto;
 }
 
 .footer-logo p {
